added cover text

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cover your page.</h1>
+    <h1 class="cover-heading">Fun stuff</h1>
     <p class="lead">Infrastructure-as-code. Ansible, Puppet, K8S and containers. Python, Kotlin and Go. Whatever is interesting at the moment</p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
