--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1 class="cover-heading">Fun stuff</h1>
+    <p class="lead">Infrastructure-as-code. Ansible, Puppet, K8S and containers. Python, Kotlin and Go. Whatever is interesting at the moment. Death to Oracle DB</p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
     </p>
