added main sub-pages for navigation

--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
 
     <!-- Bootstrap core CSS -->
-<link href="styles/bootstrap.min.css" rel="stylesheet">
+<link href="/styles/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -30,7 +30,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="/cover.css" rel="stylesheet">
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -38,20 +38,13 @@
     <div class="inner">
       <h3 class="masthead-brand">torese.dev</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="/html/home.html">Home</a>
-        <a class="nav-link active" href="/html/projects.html">Projects</a>
+        <a class="nav-link " href="/html/home.html">Home</a>
+        <a class="nav-link " href="/html/projects.html">Projects</a>
         <a class="nav-link active" href="/html/contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Fun stuff</h1>
-    <p class="lead">Infrastructure-as-code. Ansible, Puppet, K8S and containers. Python, Kotlin and Go. Whatever is interesting at the moment. Death to Oracle DB</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-    </p>
-  </main>
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
