added contact card

--- a/html/contact.html
+++ b/html/contact.html
@@ -45,6 +45,12 @@
   </header>
 
 
+  <body id="header">
+    <p id="name">Tore Egil Sæterdal</p>
+      <a href="mailto:tore.1992@gmail.com" target="_blank"><p id="email">tore.1992@gmail.com</p></a>
+    <p id="contact">+47 90601817</p>
+  </body>
+
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>Tore Sæterdal 2020</p>
