add redirect href to main page

--- a/html/projects.html
+++ b/html/projects.html
@@ -35,7 +35,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
-      <h3 class="masthead-brand">torese.dev</h3>
+      <h3 class="masthead-brand" href="/index.html">torese.dev</h3>
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link " href="/html/home.html">Home</a>
         <a class="nav-link active" href="/html/projects.html">Projects</a>
