--- a/html/projects.html
+++ b/html/projects.html
@@ -44,6 +44,18 @@
     </div>
   </header>
 
+  <body>
+    <div>
+      <p id="github-projects";>GitHub Projects</p>
+    </div>
+    <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="/github-query.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    $(function() {
+        $("#github-projects").loadRepositories("torees");
+    });
+</script>
+  </body>
   
 
   <footer class="mastfoot mt-auto">
