--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1 class="cover-heading">Fun stuff</h1>
     <p class="lead">Infrastructure-as-code. Ansible, Puppet, K8S and containers. Python, Kotlin and Go. Whatever is interesting at the moment. Death to Oracle DB</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+      <a href="/html/projects.html" class="btn btn-lg btn-secondary">Learn more</a>
     </p>
   </main>
 
