--- a/html/projects.html
+++ b/html/projects.html
@@ -48,13 +48,13 @@
     <div>
       <p id="github-projects";>GitHub Projects</p>
     </div>
-    <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="https://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="/github-query.js" type="text/javascript"></script>
     <script type="text/javascript">
     $(function() {
         $("#github-projects").loadRepositories("torees");
     });
-</script>
+    </script>
   </body>
   
 
