--- a/html/contact.html
+++ b/html/contact.html
@@ -44,12 +44,12 @@
     </div>
   </header>
 
-
-  <body id="header">
-    <p id="name">Tore Egil Sæterdal</p>
-      <a href="mailto:tore.1992@gmail.com" target="_blank"><p id="email">tore.1992@gmail.com</p></a>
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Contact me</h1>
+    <p class="lead">Tore Egil Sæterdal</p>
+      <a href="mailto:tore.1992@gmail.com" target="_blank"><p id="email">Tore.1992@gmail.com</p> </a>
     <p id="contact">+47 90601817</p>
-  </body>
+  </main>
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
