--- a/html/projects.html
+++ b/html/projects.html
@@ -44,9 +44,10 @@
     </div>
   </header>
 
-  <body>
+  <main>
+    <h1 class="cover-heading">GitHub Projects</h1>
     <div>
-      <p id="github-projects";>GitHub Projects</p>
+      <p id="github-projects";></p>
     </div>
     <script src="https://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="/github-query.js" type="text/javascript"></script>
@@ -55,7 +56,7 @@
         $("#github-projects").loadRepositories("torees");
     });
     </script>
-  </body>
+  </main>
   
 
   <footer class="mastfoot mt-auto">
