embed linkedin badge on contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -45,11 +45,15 @@
   </header>
 
   <main role="main" class="inner cover">
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <h1 class="cover-heading">Contact me</h1>
     <p class="lead">Tore Egil Sæterdal</p>
       <a href="mailto:tore.1992@gmail.com" target="_blank"><p id="email">Tore.1992@gmail.com</p> </a>
     <p id="contact">+47 90601817</p>
+   
   </main>
+
+   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="no_NO" data-type="horizontal" data-theme="dark" data-vanity="tore-sæterdal-695561b5"><a class="LI-simple-link" href='https://no.linkedin.com/in/tore-s%C3%A6terdal-695561b5?trk=profile-badge'>Tore Sæterdal</a></div>
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
