--- a/html/contact.html
+++ b/html/contact.html
@@ -53,10 +53,15 @@
    
   </main>
 
-   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="no_NO" data-type="horizontal" data-theme="dark" data-vanity="tore-sæterdal-695561b5"><a class="LI-simple-link" href='https://no.linkedin.com/in/tore-s%C3%A6terdal-695561b5?trk=profile-badge'>Tore Sæterdal</a></div>
-
+ 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <footer class="mastfoot mt-auto">
     <div class="inner">
+      <a href="https://medium.com/@tore.1992" class="fa fa-medium"></a>
+      <a href="https://twitter.com/toredal" class="fa fa-twitter"></a>
+      <a href="https://github.com/torees" class="fa fa-github"></a>
+      <a href="https://gitlab.com/torese" class="fa fa-gitlab"></a>
+      <a href="https://www.linkedin.com/in/torese/" class="fa fa-linkedin"></a>
       <p>Tore Sæterdal 2020</p>
     </div>
   </footer>
