--- a/html/home.html
+++ b/html/home.html
@@ -43,6 +43,23 @@
       </nav>
     </div>
   </header>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <main>
+    <div class="inner-cover mt-5 pt-5" id="medium">
+        <div class="cover-container">Hello</div>
+        <div class="cover-container">Hello</div>
+        <div class="cover-container">Hello</div>
+        <div class="cover-container">Hello</div>
+        <div class="cover-container">Hello</div>
+        <div class="row" id="jsonContent">
+        </div>
+    </div>
+  </main>
+
+
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <footer class="mastfoot mt-auto">
@@ -54,6 +71,7 @@
       <a href="https://www.linkedin.com/in/torese/" class="fa fa-linkedin"></a>
       <p>Tore Sæterdal 2020</p>
     </div>
+    <script src="https://www.retainable.app/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
   </footer>
 
 </div>
