--- a/html/projects.html
+++ b/html/projects.html
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-  <main>
+  <main role="main" class="inner cover">
     <h1 class="cover-heading">GitHub Projects</h1>
     <div>
       <p id="github-projects";></p>
@@ -57,6 +57,7 @@
     });
     </script>
   </main>
+  
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <footer class="mastfoot mt-auto">
