--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Fun stuff</h1>
-    <p class="lead">Infrastructure-as-code. Ansible, Puppet, K8S and containers. Python, Kotlin and Go. Whatever is interesting at the moment. Death to Oracle DB</p>
+    <p class="lead">Infrastructure-as-code. Ansible, Puppet, K8S and containers. Python, Kotlin and Go. Whatever is interesting at the moment. </p>
     <p class="lead">
       <a href="/html/projects.html" class="btn btn-lg btn-secondary">See Projects</a>
     </p>
